[project]
name = "cookie-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Ilmir Nigmatullin",email = "nigmatullin.mir@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "orjson>=3.10",
    "playwright>=1.48",
    "playwright-stealth>=1.0.6",
    "pyyaml>=6.0",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
